basic click event handling

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-5">
+            <div class="col-md-5">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">Input phrase</span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Text for translation..." aria-label="Input phrase"
+                    <input id="userInput" type="text" class="form-control" placeholder="Text for translation..." aria-label="Input phrase"
                         aria-describedby="basic-addon1">
                 </div>
             </div>
 
-            <div class="col-2 text-center">
-                    <button type="button" class="btn btn-outline-primary">Translate <i class="fas fa-arrow-right"></i></button>
+            <div class="col-md-2 text-center">
+                    <button type="button" id="translateBtn" class="btn btn-outline-primary mb-3 mb-md-0">Translate <i class="fas fa-arrow-right"></i></button>
             </div>
 
-            <div class="col-5">
+            <div class="col-md-5">
                 <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">Translation</span>
