--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         </div>
     </div>
 
+    <div id="loading" class="container">
+        <div class="alert alert-primary" role="alert">
+            Loading translation...
+        </div>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-5">
@@ -44,7 +50,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">Translation</span>
                         </div>
-                        <input type="text" class="form-control" placeholder="" aria-label="Translation" disabled   
+                        <input id="result" type="text" class="form-control" placeholder="" aria-label="Translation" disabled   
                             aria-describedby="basic-addon1">
                     </div>
             </div>
